# PBX-Stratos

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  PROMPT.md  README.ai.md  README.md  ROADMAP.md  install.bat  install.ps1  install.sh  package-lock.json  package.json  pbx  pbx.cmd  pyproject.toml  setup.ps1  uninstall.bat  uninstall.ps1  uninstall.sh
.claude/: UNIVERSAL-CORE.md  settings.json
.claude/achievements/: README.md  crypto-bro.md  default.md  drill-sergeant.md  hacker.md  quant-professor.md  surf-bro.md
.claude/personalities/: README.md  crypto-bro.md  default.md  drill-sergeant.md  hacker.md  quant-professor.md  surf-bro.md
.claude/skills/: README.md
.claude/skills/pbx-audit-context/: SKILL.md
.claude/skills/pbx-audit-restructure/: SKILL.md
.claude/skills/pbx-context/: SKILL.md
.claude/skills/pbx-install/: SKILL.md
.claude/skills/pbx-install-recover/: SKILL.md
_context/: CLAUDE.md
_context/.template/: CLAUDE.md.example  soul.md.example
_context/bear-den/: MANIFEST.md  STATUS.md
_context/bear-scout/: MANIFEST.md  STATUS.md
_context/bear-watch/: MANIFEST.md  STATUS.md
_context/protocols/: audit-brief.md  audit-professional.md
achievements/: definitions.json
bear-den/: README.md
bear-den/dashboards/: dashboard.html  dashboard.js
bear-scout/: README.md
bear-scout/aq-price/: PRICE_MODELING.md  price_backtest.py  price_data.py  price_loop.py  price_test.py  rebalance_target.py  run_price_loop.sh
bear-scout/backtest/: harness.ts  run.ts  strategies.ts
bear-scout/code/: package.json
bear-scout/runners/: README.md  _api.py  _dsl_validate.py  _simlib.py  agentic-decode.py  build-cycle-dataset.py  paper-trade.py  test_dsl_validate.py  test_metrics.py  test_simlib_regression.py  wallet-decoder.py  wallet-evolve.py  wallet-ml.py
bear-scout/scripts/: arb-direct.ts  arb-reality-check.ts
bear-watch/: EMERGENCY-STOP.md  README.md  _env-block.bat  audit-brief.md  audit-professional.md  health-check.py  pm2.config.cjs  register-scheduled-tasks.ps1  run-backup-codebase.bat  run-backup-state.bat  run-daily-digest.bat  run-health-check.bat  run-meta-watchdog.bat  run-weather-pull.bat  silent-run.vbs
bear-watch/code/: package.json  render.yaml  tsconfig.json
bots/: README.md  package.json  render.yaml  tsconfig.json
bots/scripts/: pbx-bots-remote.ts  pbx-bots.sh  pbx-bots.ts  serve.mjs
bots/src/: cli.ts  perf.ts  runner.ts
docs/: EXTENSIONS.md  HOOKS.md  SECURITY.md
kernel/ts/: package.json
lab/: README.md
lab/aq-price/: PRICE_MODELING.md  price_backtest.py  price_harness.py  price_leaderboard.py
lab/runners/: README.md  _api.py  _decode_stream.py  _dsl_validate.py  _fitness.py  _metrics.py  agentic-decode.py  build-minute-bars.py  paper-trade.py  strategy-registry.json  test_dedupe.py  test_dsl_validate.py  test_fitness.py  wallet-decoder.py  wallet-evolve.py  wallet-microcontext.py  wallet-region-predictor.py
profiles/: stratos.ps1  stratos.sh
runtime/.template/: README.md
scripts/: bootstrap.ps1  bootstrap.sh  launch.mjs  launch.test.mjs  reset-fresh.mjs  screenshot-new-pages.mjs  screenshot-onboarding.mjs  screenshot-theme-audit.mjs  screenshot-themes.mjs  setup.mjs  setup.test.mjs
scripts/lib/: platform.mjs
scripts/migrations/: README.md  template.mjs
src/pbx_trader_lab/: __init__.py  achievements.py
themes/: README.md  academia.css  beach.css  camo.css  default.css  lambo.css  matrix.css
tools/: prereqs.ps1
tools/onboarding-debug/: README.md  export.ps1  export.py  export.sh  log.ps1  log.sh  redact.py
tools/secret-scrub/: install.sh  scrub.py  test_install.py  test_scrub.py
(+177 files in other folders)
