[project]
name = "pbx-stratos"
version = "0.1.0"
description = "Air-quality-driven Solana trading bot framework with onboarding, personalities, themes, and a tested ops layer."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Typ0x" }]
keywords = ["solana", "trading", "bot", "backtest", "pbx", "air-quality", "pm2.5"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]

dependencies = [
  # Runtime is intentionally stdlib-only for the core CLI + the HTTP-based
  # decoder runners (they hit pbx-mainnet-api.onrender.com).
]

[project.optional-dependencies]
# Only needed for the optional ML step (wallet-ml.py). scikit-learn/numpy
# current releases need Python >= 3.11 — this extra is NOT used by the
# dashboard decode workflow, which is stdlib-only.
decoder = [
  "scikit-learn>=1.3",
  "numpy>=1.24",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

# No console_scripts entry yet: the CLI is the top-level ./pbx script.
# Once we wrap it in src/pbx_trader_lab/cli.py we'll re-enable:
#   pbx = "pbx_trader_lab.cli:main"

[project.urls]
Homepage = "https://github.com/Typ0x/PBX-Stratos"
Repository = "https://github.com/Typ0x/PBX-Stratos"
Issues = "https://github.com/Typ0x/PBX-Stratos/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
